--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,32 @@
-/* You can add global styles to this file, and also import other style files */
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.dev/guide/theming
+@use '@angular/material' as mat;
+
+html {
+  @include mat.theme((
+    color: (
+      theme-type: dark,
+      primary: mat.$azure-palette,
+      tertiary: mat.$blue-palette,
+    ),
+    typography: Roboto,
+    density: 0,
+  ));
+}/* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+:root {
+  @include mat.form-field-overrides((
+    outlined-focus-outline-color: #E30613,
+    outlined-focus-label-text-color: #E30613,
+    outlined-label-text-color: black,
+    outlined-input-text-color: black
+  ));
+
+  @include mat.button-overrides((
+    filled-container-shape: 5px
+  ));
+}
